[gd_scene load_steps=36 format=3 uid="uid://ct0x6mqkr58f8"]

[ext_resource type="Texture2D" uid="uid://c7vbnojwih0qa" path="res://assets/Furbytes_assets/PetMobileGameAsset/PetMobileGameAsset/Backgrounds/Classic/16.png" id="1_42u6m"]
[ext_resource type="Texture2D" uid="uid://bqmowphi2p5es" path="res://assets/Furbytes_assets/PetMobileGameAsset/PetMobileGameAsset/cat_bed_blue.png" id="2_6a0t2"]
[ext_resource type="Texture2D" uid="uid://ccxkbhu8ee3t0" path="res://assets/Furbytes_assets/RetroCatsPaid/RetroCatsPaid/Cats/AllCats.png" id="2_j6u7g"]
[ext_resource type="Script" uid="uid://b1qo7arwwma8q" path="res://scripts/cat.gd" id="3_t4dt3"]
[ext_resource type="Texture2D" uid="uid://x1cytrjocwkx" path="res://assets/Furbytes_assets/PetMobileGameAsset/PetMobileGameAsset/clock_blue.png" id="3_yfj88"]
[ext_resource type="Texture2D" uid="uid://d2mkxjbap612v" path="res://assets/Furbytes_assets/PetMobileGameAsset/PetMobileGameAsset/cat_portrait_1.png" id="4_vc3pw"]
[ext_resource type="Texture2D" uid="uid://cu04fw556osic" path="res://assets/Furbytes_assets/PetMobileGameAsset/PetMobileGameAsset/window_purple.png" id="5_gqrbp"]
[ext_resource type="Texture2D" uid="uid://bts3o1q7tc57w" path="res://assets/Furbytes_assets/PetMobileGameAsset/PetMobileGameAsset/celiling_light_blue.png" id="6_gqrbp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7nueg"]
atlas = ExtResource("2_j6u7g")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2olvd"]
atlas = ExtResource("2_j6u7g")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_spuq0"]
atlas = ExtResource("2_j6u7g")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_limvi"]
atlas = ExtResource("2_j6u7g")
region = Rect2(0, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3r2k"]
atlas = ExtResource("2_j6u7g")
region = Rect2(64, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_38gee"]
atlas = ExtResource("2_j6u7g")
region = Rect2(128, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrvyk"]
atlas = ExtResource("2_j6u7g")
region = Rect2(192, 704, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6u7g"]
atlas = ExtResource("2_j6u7g")
region = Rect2(0, 832, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4dt3"]
atlas = ExtResource("2_j6u7g")
region = Rect2(64, 832, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvxap"]
atlas = ExtResource("2_j6u7g")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bc6o"]
atlas = ExtResource("2_j6u7g")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbimm"]
atlas = ExtResource("2_j6u7g")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntuqv"]
atlas = ExtResource("2_j6u7g")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlo5d"]
atlas = ExtResource("2_j6u7g")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1wso"]
atlas = ExtResource("2_j6u7g")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec08j"]
atlas = ExtResource("2_j6u7g")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj73a"]
atlas = ExtResource("2_j6u7g")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_47coq"]
atlas = ExtResource("2_j6u7g")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipjya"]
atlas = ExtResource("2_j6u7g")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruc7n"]
atlas = ExtResource("2_j6u7g")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4lqk"]
atlas = ExtResource("2_j6u7g")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnxy5"]
atlas = ExtResource("2_j6u7g")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhqaa"]
atlas = ExtResource("2_j6u7g")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_evyms"]
atlas = ExtResource("2_j6u7g")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j838r"]
atlas = ExtResource("2_j6u7g")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iol0f"]
atlas = ExtResource("2_j6u7g")
region = Rect2(320, 320, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6a0t2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nueg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2olvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spuq0")
}],
"loop": true,
"name": &"Beg",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_limvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3r2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38gee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrvyk")
}],
"loop": true,
"name": &"Dance",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6u7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4dt3")
}],
"loop": true,
"name": &"Eat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvxap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bc6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbimm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntuqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlo5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1wso")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec08j")
}],
"loop": true,
"name": &"Lazy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj73a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47coq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipjya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruc7n")
}],
"loop": true,
"name": &"Sleep",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4lqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnxy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhqaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evyms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j838r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iol0f")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[node name="Node2D" type="Node2D"]

[node name="Room" type="Node2D" parent="."]

[node name="CatRoom" type="Sprite2D" parent="Room"]
position = Vector2(183, 322)
scale = Vector2(2, 2)
texture = ExtResource("1_42u6m")

[node name="CatBedBlue" type="Sprite2D" parent="Room/CatRoom"]
position = Vector2(2, 95.5)
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_6a0t2")

[node name="ClockBlue" type="Sprite2D" parent="Room/CatRoom"]
position = Vector2(-1.5, -69)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_yfj88")

[node name="CatPortrait1" type="Sprite2D" parent="Room/CatRoom"]
position = Vector2(79.5, -18)
texture = ExtResource("4_vc3pw")

[node name="WindowPurple" type="Sprite2D" parent="Room/CatRoom"]
position = Vector2(-1, -8.5)
texture = ExtResource("5_gqrbp")

[node name="CelilingLightBlue" type="Sprite2D" parent="Room/CatRoom"]
position = Vector2(-0.5, -143.5)
scale = Vector2(0.75, 0.75)
texture = ExtResource("6_gqrbp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Room"]
position = Vector2(325, 529)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6a0t2")
animation = &"Beg"
autoplay = "Beg"
script = ExtResource("3_t4dt3")

[node name="Timer" type="Timer" parent="Room/AnimatedSprite2D"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Button" type="Button" parent="."]
offset_left = 33.0
offset_top = 95.0
offset_right = 88.0
offset_bottom = 124.0
text = "Feed"

[node name="Button3" type="Button" parent="."]
offset_left = 99.0
offset_top = 96.0
offset_right = 154.0
offset_bottom = 125.0
text = "Sleep"

[connection signal="timeout" from="Room/AnimatedSprite2D/Timer" to="Room/AnimatedSprite2D" method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="Room/AnimatedSprite2D" method="_on_button_feed"]
[connection signal="pressed" from="Button3" to="Room/AnimatedSprite2D" method="_on_button_sleep"]
